Fix sidebar spacing

--- a/src/app/tokens.css
+++ b/src/app/tokens.css
@@ -71,7 +71,7 @@
   --sidebar-accent: var(--hoverBackgroundColor); /* hover color */
   --sidebar-accent: #eaecee; /* hover color */
   --sidebar-accent-foreground: var(--sapList_TextColor);
-  --sidebar-border: #7996b4;
+  --sidebar-border: #d9d9d9;
   --sidebar-ring: #d1e8ff;
 
   /* Typography */
@@ -233,4 +233,12 @@ body {
   background-position-y: 100%;
   background-repeat: no-repeat;
   background-size: 100% 1px;
+}
+
+[data-slot="sidebar-container"].mt-16 {
+  margin-top: calc(var(--spacing) * 14);
+}
+
+body:not(:has(.header.shellbar)) [data-slot="sidebar-container"].mt-16 {
+  margin-top: 0;
 }
